--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 apache-airflow-providers-github==2.7.0
+apache-airflow>=2.7.0
+apache-airflow-providers-postgres>=5.14.0
+sqlalchemy>=2.0.0
+requests>=2.31.0
+pendulum>=2.1.2
+pytz
+psycopg2-binary>=2.9.9
