--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-apache-airflow-providers-github==2.7.0
+apache-airflow-providers-github
 apache-airflow-providers-postgres>=5.14.0
 sqlalchemy
 requests>=2.31.0
